--- a/app/globals.css
+++ b/app/globals.css
@@ -45,12 +45,23 @@
 }
 
 .text-gradient-3 {
-  background: linear-gradient(90deg, #625F5F 0.02%, #625F5F63 86.11%);
+  background: linear-gradient(90deg, #625f5f 0.02%, #625f5f63 86.11%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
-.bg-gradient-1{
-  background: linear-gradient(268.14deg, #65B0D2 -4.96%, #1C5294 98.44%);
+.text-gradient-4 {
+  background: linear-gradient(90.08deg, #979797 0.02%, #d8d8d8 86.11%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.bg-gradient-1 {
+  background: linear-gradient(268.14deg, #65b0d2 -4.96%, #1c5294 98.44%);
+}
+
+.bg-gradient-2 {
+  background: linear-gradient(96.99deg, #222222 -0.89%, rgba(0, 0, 0, 0.76) 95.89%);
 }
