--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button-border-1{
+  border: 2px solid rgba(133, 133, 133, 0.25);
+}
