--- a/app/globals.css
+++ b/app/globals.css
@@ -89,19 +89,30 @@
   background: linear-gradient(96.99deg, #222222 -0.89%, rgba(0, 0, 0, 0.76) 95.89%);
 }
 
-.bg-gradient-4{
+.bg-gradient-4 {
   background-color: rgba(255, 255, 255, 0.53);
 }
 
-.bg-gradient-5{
-  background: linear-gradient(7.32deg, #D8D6D6 3.99%, #FFFFFF 99.3%);
+.bg-gradient-5 {
+  background: linear-gradient(7.32deg, #d8d6d6 3.99%, #ffffff 99.3%);
 }
 
-.grid-cols-1-2{
+.grid-cols-1-2 {
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
 
-.shadow-1{
+.shadow-1 {
   box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.25);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.startup-pricing-cards::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.startup-pricing-cards {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
