--- a/app/globals.css
+++ b/app/globals.css
@@ -116,3 +116,10 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.for-startups-nav-link:hover {
+  background: linear-gradient(90deg, #208372 0.2%, #4bc9b5 100.2%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
